# corrosick

./: :q  Cargo.toml  README.md
src/: aho_corasick.rs  lib.rs  matches.rs  trie.rs
